@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2574] improved fixed graph Y axis measurement (Aly)
  - [ZBX-2576] small text changes in administration/audit (Vedmak)
  - [ZBX-1857] fixed item form correct processing, removed refreshing when item type is changed (Maxim Andruhovich / AM)
  - [ZBX-2528] fixed default language loading before using phrases, warning messages removed which were displayed after login (Maxim Andruhovich / AM)
